src/core-crm/objects/IP_Management_Application__c/IP_Management_Application__c.object-meta.xml
<CustomObject>
    <description>IP Management Application stores information about an application that has been lodged into an external application management system.</description>
    <label>IP Management Application</label>
    <nameField>
        <displayFormat>IPMA-{00000}</displayFormat>
        <label>IP Management Application</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IP Management Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>