src/core-crm/objects/IP_Management_Application__c/fields/Application_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Expiry_Date__c</fullName>
    <description>The date the application expires.</description>
    <label>Application Expiry Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>