src/core-crm/objects/IP_Management_Application__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <description>The type of Application lodged in the external system.</description>
    <label>Application Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Provisional</fullName>
            </value>
            <value>
                <fullName>PCT</fullName>
            </value>
            <value>
                <fullName>National Phase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>