src/core-crm/objects/IP_Management_Application__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The Application Due Date.</description>
    <label>Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>