src/core-crm/objects/IP_Management_Application__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <description>External Key used by integration framework</description>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>