src/core-crm/objects/IP_Management_Application__c/fields/International_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>International_Application_Number__c</fullName>
    <description>The international reference number for an application in the external system.</description>
    <label>International Application Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>