src/core-crm/objects/IP_Management_Application__c/fields/IP_Management_Code__c.field-meta.xml
<CustomField>
    <fullName>IP_Management_Code__c</fullName>
    <description>Lookup to related IP Management record.</description>
    <label>IP Management Code</label>
    <referenceTo>IP_Management__c</referenceTo>
    <relationshipLabel>IP Management Applications</relationshipLabel>
    <relationshipName>IP_Management_Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>