src/core-crm/objects/IP_Management_Application__c/fields/National_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>National_Application_Number__c</fullName>
    <description>The national reference number for an application in the external system.</description>
    <label>National Application Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>