src/core-crm/objects/IP_Management_Application__c/fields/Provisional_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Provisional_Application_Number__c</fullName>
    <description>Provisional reference number assigned upon lodgement of an application.</description>
    <label>Provisional Application Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>