src/core-crm/objects/IP_Management_Application__c/fields/Provisional_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Provisional_Reference_Number__c</fullName>
    <description>Provisional Reference assigned upon lodgement of Application.</description>
    <label>Provisional Reference No</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>