src/core-crm/objects/IP_Management_Application__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <description>The reference number for the application in/from the external system.</description>
    <label>Reference Number</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>