src/core-crm/objects/IP_Management_Application__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>The external application management system where an application has been lodged that relates to the IP Management record.</description>
    <label>Source</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>