src/core-crm/objects/IP_Management_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The status of the Application.</description>
    <label>Status</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>