src/core-crm/objects/IP_Management_Application__c/fields/Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Date__c</fullName>
    <description>The date of the application status.</description>
    <label>Status Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>