src/core-crm/objects/IP_Management_Application__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <description>The Application submission date.</description>
    <label>Submission Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>